feat(new feature): j9 - private methods in interfaces